force-app/main/default/objects/RequiredRole__c/RequiredRole__c.object-meta.xml
<CustomObject>
    <label>Required Role</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Required Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>