force-app/main/default/objects/RequiredRole__c/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <label>Estimated Amount</label>
    <summarizedField>Project_Resource__c.Estimated_Hours__c</summarizedField>
    <summaryForeignKey>Project_Resource__c.Required_Role__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>