force-app/main/default/objects/RequiredRole__c/fields/Hours_To_Cover__c.field-meta.xml
<CustomField>
    <fullName>Hours_To_Cover__c</fullName>
    <formula>Number_of_hours_sold__c -  Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours To Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>