force-app/main/default/objects/RequiredRole__c/fields/Number_of_hours_sold__c.field-meta.xml
<CustomField>
    <fullName>Number_of_hours_sold__c</fullName>
    <label>Number of hours sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>